# ConnectionHub

./: AutomateRouting.sh  README.md  autoConf.sh  mqtt_client.py
audio/: subscriber.py
connectionHub/: .sender.h.swp  CMakeCache.txt  Communicator.cpp  Makefile  cmake_install.cmake  connectionHub  test.cpp
connectionHub/src/mosquitto-1.4.12/: Makefile  cmake_install.cmake  install_manifest.txt
connectionHub/src/mosquitto-1.4.12/client/: Makefile  cmake_install.cmake
connectionHub/src/mosquitto-1.4.12/lib/: cmake_install.cmake
connectionHub/src/mosquitto-1.4.12/man/: Makefile
connectionHub/src/mosquitto-1.4.12/src/: cmake_install.cmake
folder/: AutomateRouting.sh  autoConf.sh  mqtt_client.py  olsr_conf  publisher.py  sendThroughsocket.py
folder/connectionHub/: CMakeCache.txt  CMakeLists.txt  Communicator.h  Makefile  cmake_install.cmake  connectionHub  test.cpp
folder/connectionHub/src/mosquitto-1.4.12/: CMakeCache.txt
folder/connectionHub/src/mosquitto-1.4.12/client/: mosquitto_pub  mosquitto_sub
folder/connectionHub/src/mosquitto-1.4.12/lib/: CMakeCache.txt  Makefile
folder/connectionHub/src/mosquitto-1.4.12/lib/cpp/: Makefile  cmake_install.cmake  libmosquittopp.so.1
folder/connectionHub/src/mosquitto-1.4.12/man/: cmake_install.cmake
folder/connectionHub/src/mosquitto-1.4.12/src/: Makefile  mosquitto  mosquitto_passwd
heartRate/: HRclient.py  HRpublisher.py
sound/: .server.py.swp  audio_pub.py  audio_sub.py  server.py  subscriber.py
video/: camera.py  main.py  video_pub.py  video_sub.py
video/templates/: index.html
(+1 files in other folders)
